# your-paper-reading-agent

./: .gitignore  AGENTS.md  README.md  install.sh  main.py  pyproject.toml  test_inst.py
.agents/: AGENTS.md
.agents/skills/llm-provider-docs/: SKILL.md
.github/workflows/: ci.yml
.qoder/: settings.local.json
.superpowers/sdd/: progress.md
config/: profile.md  settings.example.toml
docs/superpowers/plans/: 2026-06-19-responses-api-migration.md  2026-06-23-arxiv-html-reader.md  2026-06-23-tui-llm-selection-menus-update-plan.md
docs/superpowers/specs/: 2026-06-19-responses-api-migration-design.md  2026-06-23-arxiv-html-reader-design.md  2026-06-23-tui-llm-selection-menus-update-design.md
scratch/: render_report.py  test_report.html
src/ppagent/: AGENTS.md  __init__.py  arxiv_html.py  cli.py  config.py  figures.py  hf.py  llm.py  models.py  pdf.py  pipeline.py  providers.py  scheduler.py  storage.py  tui.py  tui_pipeline.py
src/ppagent/agents/: __init__.py  assembler.py  base.py  classifier.py  criticizer.py  figure_selector.py  finder.py  prompts.py  searcher.py  tools.py  writer.py
src/ppagent/publishers/: __init__.py  base.py  blog.py  notion.py  (+2 more)
templates/: report.html.jinja2  report.md.jinja2
tests/: conftest.py  test_agent_base.py  test_arxiv_html.py  test_classifier.py  test_cli.py  test_config_persistence.py  test_figures.py  test_finder_tools.py  test_latex_rendering.py  test_llm_errors.py  test_pricing.py  test_prompts.py  test_providers.py  test_publishers.py  test_streaming.py  test_tui_config.py  test_tui_pipeline.py  test_xai_tool.py
